related concepts -> see also; wikification; correct danish gender; latin -> scientific name <rooster#8162>

--- a/wiki/rooster.wikitext
+++ b/wiki/rooster.wikitext
@@ -5,9 +5,12 @@
 *[[w:SAMPA|SAMPA]]: /"ru:st@(r)/
 
 === Noun ===
-'''rooster''
+'''rooster'' ([[rosters]])
 
 # male domestic [[bird]]
+
+====Scientific names====
+*[[Gallus gallus]]
 
 ==== Synonyms ====
 *[[cock]]
@@ -15,33 +18,30 @@
 ==== Related terms ====
 *[[roost]]
 
-==== Related concepts ====
-
-*[[chicken]]
-*[[hen]]
-
 ==== Translations ====
-
 *[[Breton]]: [[kilhog]] ''m''
 *Chinese: [[雄鸡]] (xióng jī)
-*[[Czech]]: [[kohout]] ''m''
-*[[Danish]]: [[hane]] ''m''
-*[[Dutch]]: [[haan]] ''m''
-*[[Estonian]]: [[kukk]], [[kikas]]
-*[[Finnish]]: [[kukko]]
-*[[French]]: [[coq]] ''m''
-*[[German]]: [[Hahn]] ''m''
-*[[Hebrew]]: [[תרנגול]] (Tar'ne'gol) ''m''
-*[[Italian]]: [[gallo]] ''m''
-*[[Latin]]: [[Gallus gallus]]
-*[[Lithuanian]]: [[gaidys]] ''m''
-*[[Polish]]: [[kogut]] ''m''
-*[[Romanian]]: [[cocoş]] ''m''
-*[[Russian]]: [[петух]] (petukh)
+*Czech: [[kohout]] ''m''
+*Danish: [[hane]] ''c''
+*Dutch: [[haan]] ''m''
+*Estonian: [[kukk]], [[kikas]]
+*Finnish: [[kukko]]
+*French: [[coq]] ''m''
+*German: [[Hahn]] ''m''
+*Hebrew: [[תרנגול]] (Tar'ne'gol) ''m''
+*Italian: [[gallo]] ''m''
+*Lithuanian: [[gaidys]] ''m''
+*Polish: [[kogut]] ''m''
+*Romanian: [[cocoş]] ''m''
+*Russian: [[петух]] (petukh)
 *{{sk}}: [[kohút]] ''m''
-*[[Slovene]]: [[petelin]] ''m''
-*[[Spanish]]: [[gallo]] ''m''
-*[[Turkish]]: [[horoz]]
+*Slovene: [[petelin]] ''m''
+*Spanish: [[gallo]] ''m''
+*Turkish: [[horoz]]
+
+==== See also ====
+*[[chicken]]
+*[[hen]]
 
 ----
 
@@ -52,5 +52,4 @@
 # [[roster]]
 
 [[Category:English birds]]
-
 [[nl:rooster]]
