fmt; decapitalise <chook#3830>

--- a/wiki/chook.wikitext
+++ b/wiki/chook.wikitext
@@ -1,7 +1,5 @@
-==Noun==
-'''Chook''', Plural '''Chooks'''.
-# ([[Australian]] [[slang]]) A hen, or a cooked [[chicken]].
+==English==
+===Noun===
+'''chook''', Plural '''chooks'''.
 
-==Translations==
-
-*[[English]]: [[chicken]]
+# ([[Australian]] [[slang]]) A [[hen]], or a cooked [[chicken]].
