/* Quotes */ add quote <God complex#1636795>

--- a/wiki/God_complex.wikitext
+++ b/wiki/God_complex.wikitext
@@ -14,7 +14,8 @@ In the book ''All Mighty: A Study of the God Complex in Western Man'', by [[Hors
 
 ==Quotes==
 
-"Only two things are infinite, the universe and human stupidity, and I'm not sure about the former."  (Attribution unverified) [[Albert Einstein]]
+* "Only two things are infinite, the universe and human stupidity, and I'm not sure about the former."  (Attribution unverified) [[Albert Einstein]]
+* "Stupid is as stupid does."  [[Forest Gump]]
 
 ==External links==
 
