robot  Adding:et <corruption#65010>

--- a/wiki/corruption.wikitext
+++ b/wiki/corruption.wikitext
@@ -40,7 +40,8 @@ French ''corruption'', from Latin ''[[corruptio]]''
 **'''Corruption of blood''' can be removed only by act of Parliament. - [[Blackstone]]
 -->
 
+{{webster}}
+
+[[et:Corruption]]
 [[it:corruption]]
 [[pl:Corruption]]
-
-{{webster}}
