--- a/wiki/house_warming.wikitext
+++ b/wiki/house_warming.wikitext
@@ -1,3 +1,3 @@
-== House Warming ==
+== House warming ==
 
- The act of welcoming a person/family to their newly purchased house.
+ 1. The act of welcoming a person/family to their newly purchased house.
