/* Translations */ merge chinese traditional & simplified; balance columns; da++; etc <chicken#8161>

--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -32,23 +32,21 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
 *[[Alabama]]: [[akaaka]] (1)
 *Albanian: [[gjeli]]
 *Arabic: [[دّجاج]]
 *[[Basque]]: [[oilasko]], [[oilo]]
-*Belarusian: [[птушаня/птушане]], [[курыца]], [[кураня/куране]]
+*Belarusian: [[птушаня]] / [[птушане]], [[курыца]], [[кураня]] / [[куране]]
 *[[Bosnian]]: [[kokoš]] ''f'', [[pile#Bosnian|pile]]
 *[[Breton]]: [[yar]] ''f'', [[penn]] [[yar]] ''m''
 *Bulgarian: [[пиле]] ''n''
 *[[Catalan]]: [[pollastre]] ''m'', [[gallina]] ''f'', [[gall]] ''m''
 *[[Cebuano]]: [[manok]]
 *[[Chickasaw]]: [[akaka]] (1)
-*Chinese, Simplified: [[鸡]] (''[[pinyin]]'': jī, ji, ji1)
-*Chinese, Traditional: [[雞]], [[鷄]] (''pinyin'': jī) 
+*Chinese: [[雞]], [[鷄]], [[鸡]] (''pinyin'': jī) 
 *Croatian: [[pile#Croatian|pile]], [[kokoš]]
 *Czech: [[slepice]] ''f'',  [[kur]] ''m'', [[kuře]] ''n'' (''young'')
-*Danish: [[høne]]
+*Danish: [[kylling]] ''c''; [[høne]] ''c''; [[bangebuks]] ''c'' (''coward'')
 *Dutch: [[kip#Dutch|kip]] ''f'', [[hen#Dutch|hen]] ''f''
 *[[Esperanto]]: [[koko]]
 *Estonian: [[kana]]
@@ -69,7 +67,6 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
 *Japanese: [[鶏]] ([[ニワトリ]], niwatori)
 *[[Ladin]]: [[gialina]]
 *Latvian: [[cālis]], [[vista#Latvian|vista]]
@@ -109,15 +106,13 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
 *Dutch: [[kippenvlees]] ''n''
 *French: [[poulet]] ''m''
-*Italian: [[pollo]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+*Italian: [[pollo]] ''m''
 |}
 |}
 
@@ -134,7 +129,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
-*[[Polish]]: [[tchórz]] ''m'' 
+*Polish: [[tchórz]] ''m'' 
 |}
 |}
 
