robot  Adding:zh <country#2068>

--- a/wiki/country.wikitext
+++ b/wiki/country.wikitext
@@ -213,7 +213,9 @@ Middle English [[contree]], [[contre]], from Old French [[contrée]], from Vulga
 |}
 |}
 
+[[Category:1000 English basic words]]
+
 [[fr:country]]
 [[it:country]]
 [[hu:country]]
-[[Category:1000 English basic words]]
+[[zh:Country]]
