space after comma <naive#93816>

--- a/wiki/naive.wikitext
+++ b/wiki/naive.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-French ''[[naïve]]'', from Latin ''[[nativus]]'' 'native, natural'.
+From French ''[[naïve]]'', from Latin ''[[nativus]]'' 'native, natural'.
 
 ===Pronunciation===
 *[[w:International Phonetic Alphabet|IPA]]:/naɪiv/
@@ -10,7 +10,7 @@ French ''[[naïve]]'', from Latin ''[[nativus]]'' 'native, natural'.
 '''naive'''
 # Lacking [[experience]], [[wisdom]], or [[judgement]].
 # (of art) Produced in a simple, childlike style, deliberately rejecting sophisticated techniques.
-# (of philosophy) Purposefully deluding oneself into believing in innocence and the ability to change things for the better,despite overwhelming proof to the contrary, in order to live a life of hope
+# (of philosophy) Purposefully deluding oneself into believing in innocence and the ability to change things for the better, despite overwhelming proof to the contrary, in order to live a life of hope
 
 [[it:naive]]
 [[pl:Naive]]
