+etym, Sp. fem. <gallo#6466>

--- a/wiki/gallo.wikitext
+++ b/wiki/gallo.wikitext
@@ -1,6 +1,9 @@
+===Etymology===
+From Latin '''[[gallus]]''', ''rooster''
+
 == Italian ==
 === Noun ===
-'''gallo''' ''m'' (''f'' [[gallina]])
+'''gallo''' ''m'' ('''[[gallina]]''' ''f'')
 
 # [[rooster]]
 
@@ -22,7 +25,7 @@
 
 == Spanish ==
 === Noun ===
-'''gallo''' ''m''
+'''gallo''' ''m''  ('''[[gallina]]''' ''f'')
 
 # [[rooster]]
 # [[John dory]], a kind of fish (''[[Zeus faber]]'')
