robot  Adding:fr <cracker#56680>

--- a/wiki/cracker.wikitext
+++ b/wiki/cracker.wikitext
@@ -23,3 +23,5 @@ The derogatory sense was originally applied by 18th-century cotton and rice plan
 *[[cookie]]<!-- "cracker" and "cookie" are both covered by "biscuit" -->
 
 [[Category:Ethnic slurs]]
+
+[[fr:cracker]]
