robot  Adding:fr <crack#39677>

--- a/wiki/crack.wikitext
+++ b/wiki/crack.wikitext
@@ -69,7 +69,9 @@
 *[[cracker-jack]]<!--varients: [[cracker jack]], [[Cracker Jack]](tm)-->
 *[[crack kills]]<!--pl, historic anti-drug phrase in US.  +Bart Simpson-->
 
-[[de:Crack]]
-[[it:crack]]
 [[Category:Irish derivations]]
 [[Category:1000 English basic words]]
+
+[[de:Crack]]
+[[fr:crack]]
+[[it:crack]]
