Formatted & corrected; added adjective form <ceramic#33579>

--- a/wiki/ceramic.wikitext
+++ b/wiki/ceramic.wikitext
@@ -1,4 +1,16 @@
-a hard brittle material that is produced through burning of nonmetallic [[mineral]]s at high temperatures. as ex. a ceramic [[dish]].
+===Adjective===
+'''ceramic'''
+
+# made of material produced by the burning of nonmetallic minerals at high temperatures
+#: ''A ceramic vase stood on the table.''
+
+===Noun===
+'''ceramic''', plural '''[[ceramics]]''' (''sometimes uncountable'')
+
+# ''(uncountable)'' a hard brittle material that is produced through burning of nonmetallic [[mineral]]s at high temperatures
+#: ''Joan made the [[dish]] of ceramic.''
+# ''(countable)'' an object made of this material
+#: ''Joe had dozens of ceramics in his apartment.''
 
 ====Translations====
 
@@ -18,6 +30,10 @@ a hard brittle material that is produced through burning of nonmetallic [[minera
 *Romanica: [[ceramica]] ''f''
 *Swedish: [[keramik]]
 *{{uk}}: [[кераміка]] (keramika)
+
+===Related Terms===
+*[[ceramics]]
+
 
 {{Wikipedia}}
 
