--- a/wiki/object.wikitext
+++ b/wiki/object.wikitext
@@ -1,3 +1,6 @@
+===Etymology===
+From Latin '''[[objectum]]''', ''object'', literally ''thrown against'', from perfect passive participle '''[[objectus]]''', from verb '''[[objicere]]''', ''throw against'', from prefix '''[[ob-]]''', ''against'', plus verb '''[[jacere]]''', ''throw''.
+
 ==English==
 ===Pronunciation===
 *ŏb'jĕkt, /ˈɒbdʒekt/, /<tt>"QbdZekt</tt>/
