--- a/wiki/tightass.wikitext
+++ b/wiki/tightass.wikitext
@@ -1,1 +1,2 @@
+{{rfd}}
 One who has not figured out how to have fun. Someone who is too worried about little insignificant things. Many people like this are so convinced that their behaviour is correct, that they insist on ruining any fun that anyone around them may be having.
