--- a/wiki/understand.wikitext
+++ b/wiki/understand.wikitext
@@ -29,6 +29,7 @@
 *[[understood]]
 
 ==== Translations ====
+*Chinese: [[ming2bai2]]
 *Czech: [[rozumět]]
 *Dutch: [[verstaan]], [[begrijpen]] (1)
 *[[Esperanto]]: [[kompreni]] (1)
