robot  Adding:it <crib#96021>

--- a/wiki/crib.wikitext
+++ b/wiki/crib.wikitext
@@ -34,3 +34,5 @@ Eg, during [[WW2]], British [[cryptanalysts]] knew that many [[German]] messages
 ===Derived terms===
 *[[cribber]]
 *[[crib death]]
+
+[[it:crib]]
