--- a/wiki/Macau.wikitext
+++ b/wiki/Macau.wikitext
@@ -5,7 +5,7 @@
 # A city just West of [[Hong Kong]].
 
 ===Translations===
-*[[Chinese]]: [[澳门]] (Ao4men2)
+*[[Chinese]]: [[澳门]] (ào mén)
 *Spanish: [[Macau]]
 
 [[pt:Macau]]
