/* Derived Terms */ <ob-#99684>

--- a/wiki/ob-.wikitext
+++ b/wiki/ob-.wikitext
@@ -25,6 +25,9 @@ From Latin '''ob-'''
 
 ===Derived Terms===
 *[[object]]
+*[[observe]]
+*[[obstruct]]
+*[[obscene]]
 *[[office]]
 *[[oppose]]
 *[[opposition]]
