Formatted; + etym. <immensurable#99676>

--- a/wiki/immensurable.wikitext
+++ b/wiki/immensurable.wikitext
@@ -1,4 +1,8 @@
+===Etymology===
+From Latin '''[[immensurabilis]]''', from prefix '''[[im-]]''', ''not'', variant form of '''[[in-]]''', plus '''[[mensura]]''', ''measure'', plus suffix '''[[-abilis]]''', ''able''
+
 ==English==
 ===Adjective===
-'''immensurable'''<br>
-''See [[immeasurable]]''
+'''immensurable'''
+
+# [[unmeasurable]], [[immeasurable]]; not able to be measured, therefore connoting extremely large
