Formatted, expanded <unmeasurable#99677>

--- a/wiki/unmeasurable.wikitext
+++ b/wiki/unmeasurable.wikitext
@@ -1,4 +1,13 @@
 ==English==
 ===Adjective===
 '''unmeasurable'''
-''See [[immeasurable]]''
+
+# not able to be measured; [[immeasurable]]
+
+====Synonyms====
+*[[immensurable]]
+
+====Related Terms====
+*[[measurable]]
+*[[measure]]
+*[[meter]]
