robot  Adding:fi <cruel#7387>

--- a/wiki/cruel.wikitext
+++ b/wiki/cruel.wikitext
@@ -33,8 +33,10 @@
 ===Related terms===
 *[[cruellement]]
 
+[[Category:1000 English basic words]]
+
 [[et:Cruel]]
 [[it:cruel]]
 [[pl:Cruel]]
 [[ru:Cruel]]
-[[Category:1000 English basic words]]
+[[fi:Cruel]]
