robot  Adding:fr <cuatro#46296>

--- a/wiki/cuatro.wikitext
+++ b/wiki/cuatro.wikitext
@@ -13,6 +13,7 @@ From Latin ''[[quattuor]]'', '''four'''
 *[[quattuor]]
 *[[cuadrado]]
 
+[[fr:cuatro]]
 [[gl:Cuatro]]
 [[hu:Cuatro]]
 [[sv:cuatro]]
