robot  Adding:la <cubiculum#38178>

--- a/wiki/cubiculum.wikitext
+++ b/wiki/cubiculum.wikitext
@@ -9,3 +9,5 @@ From the Latin [[cubiculum]].
 # A small room carved out of the wall of a [[catacomb]], used for Christian worship in Roman times.
 
 {stub}
+
+[[la:Cubiculum]]
