rv the usual suspect <dōngjīng#49779>

--- a/wiki/d%C5%8Dngj%C4%ABng.wikitext
+++ b/wiki/d%C5%8Dngj%C4%ABng.wikitext
@@ -1,10 +1,10 @@
 ==Chinese [[Pinyin]]==
 ===Noun===
-'''[[dōng]][[jīng]]''' ([[東經]], [[东经]], [[dongjing]], [[dong1jing1]])
+'''[[dōng]][[jīng]]''' ([[東經]], [[东经]])
 
 # [[east]] [[longitude]]
 
 ===Proper noun===
-'''[[Dōng]][[jīng]]''' ([[東京]], [[东京]], [[Dongjing]], [[Dong1jing1]])
+'''[[Dōng]][[jīng]]''' ([[東京]], [[东京]])
 
 # [[Tokyo]]
