robot  Adding:pl,et <cum laude#53182>

--- a/wiki/cum_laude.wikitext
+++ b/wiki/cum_laude.wikitext
@@ -19,3 +19,6 @@ In the USA, there are three honors often added to diplomas and degrees, and a fo
 *[[laudatory]]
 *[[laude]]
 *[[lauds]]
+
+[[et:Cum laude]]
+[[pl:Cum laude]]
