--- a/wiki/spook.wikitext
+++ b/wiki/spook.wikitext
@@ -13,6 +13,8 @@
 # a [[ghost]] or an [[apparition]] 
 # a [[hobgoblin]].
 
+4. Also a slang term for a [[spy]].
+
 === Verb ===
 '''spook''' ('''spooked''' '''spooking''')
 
