robot  Adding:es <current events#129>

--- a/wiki/current_events.wikitext
+++ b/wiki/current_events.wikitext
@@ -4,6 +4,7 @@
 
 [[de:Wiktionary:Aktuell]]
 [[et:Current events]]
+[[es:Current events]]
 [[fr:Current events]]
 [[gl:Wiktionary:Actualidade]]
 [[hu:Current events]]
