--- a/wiki/cut.wikitext
+++ b/wiki/cut.wikitext
@@ -70,4 +70,6 @@ French: [[prêt à porter]]
 # Of a thing which has been cut.  ("That's our finest '''cut''' of meat.")
 # {{Cricket}} of a shot played with a [[horizontal]] bat to hit the ball backward of point.
 
+[[es:cut]]
 [[it:cut]]
+[[pt:Cut]]
