/* Noun */ fmt <spook#76939>

--- a/wiki/spook.wikitext
+++ b/wiki/spook.wikitext
@@ -13,7 +13,9 @@
 # a [[ghost]] or an [[apparition]] 
 # a [[hobgoblin]].
 
-4. Also a slang term for a [[spy]].
+=== Verb ===
+'''to spook'''
+# to [[spy]].
 
 === Verb ===
 '''spook''' ('''spooked''' '''spooking''')
