where does this go? <spook#76939>

--- a/wiki/spook.wikitext
+++ b/wiki/spook.wikitext
@@ -12,10 +12,7 @@
 #* The visit to the old [[cemetery]] brought scary visions of '''spooks''' and ghosts.
 # a [[ghost]] or an [[apparition]] 
 # a [[hobgoblin]].
-
-=== Verb ===
-'''to spook'''
-# to [[spy]].
+# a [[spy]]
 
 === Verb ===
 '''spook''' ('''spooked''' '''spooking''')
