--- a/wiki/rooster.wikitext
+++ b/wiki/rooster.wikitext
@@ -5,7 +5,7 @@
 *[[w:SAMPA|SAMPA]]: /"ru:st@(r)/
 
 === Noun ===
-'''rooster'' ([[rosters]])
+'''rooster''' ([[rosters]])
 
 # male domestic [[bird]]
 
