--- a/wiki/ceramic.wikitext
+++ b/wiki/ceramic.wikitext
@@ -5,7 +5,11 @@
 # made of material produced by the burning of nonmetallic minerals at high temperatures
 #: ''A ceramic vase stood on the table.''
 
+====Translations====
+*Italian: [[ceramico]]
+
 ===Noun===
+{{Wikipedia}}
 '''ceramic''', plural '''[[ceramics]]''' (''sometimes uncountable'')
 
 # ''(uncountable)'' a hard brittle material that is produced through burning of nonmetallic [[mineral]]s at high temperatures
@@ -17,14 +21,15 @@
 
 *Bulgarian: [[Керамика]] (keramika)
 *Catalan: [[ceràmica]]
-*Chinese: [[陶瓷]] ()
+*Chinese: [[陶瓷]] (táocí)
 *Czech: [[keramica]]
 *Dutch: [[keramiek]]
 *German: [[Keramik]] ''f''
 *Greek: [[Κεραμική]] (Keramiki)
-*French: [[ceramique]]
+*French: [[céramique]]
 *Hebrew: [[קרמיקה]] (keramiko)
-*Japanese: [[セラミックス]] (keram&#299;kusu, keramiikusu)
+*Italian: [[ceramica]]
+*Japanese: [[陶器]], [[陶芸品]]
 *Malaysian: [[seramik]]
 *Polish: [[ceramika]]
 *Russian: [[Керамика]] (keramika)
@@ -34,8 +39,5 @@
 
 ===Related Terms===
 *[[ceramics]]
-
-
-{{Wikipedia}}
 
 [[pl:Ceramic]]
