--- a/wiki/coward.wikitext
+++ b/wiki/coward.wikitext
@@ -1,11 +1,18 @@
 =={{en}}==
 === Etymology ===
-From Latin: '''cauda''', comparison of an animal with tail between its legs
+From Latin: '''[[cauda]]''', comparison of an animal with tail between its legs
+
+==== Pronunciaton ====
+kou'ərd
+
 ===Noun===
 '''coward''' (''plural'' '''cowards''')
+
 #a person who lacks [[courage]]
 #A trait from the '''Cowardly''' Lion in the Wizard of OZ
 #* A '''coward''' is worse than a [[back-biting]] dog. At least you can [[put the dog down]].
-==== Pronunciaton ====
-kou'ərd
+
+====Translations====
+*Danish: [[bangebuks]] ''c''
+
 [[pl:Coward]]
