--- a/wiki/coward.wikitext
+++ b/wiki/coward.wikitext
@@ -12,6 +12,9 @@ kou'ərd
 #A trait from the '''Cowardly''' Lion in the Wizard of OZ
 #* A '''coward''' is worse than a [[back-biting]] dog. At least you can [[put the dog down]].
 
+====Derived terms====
+*[[cowardly]]
+
 ====Translations====
 *Danish: [[bangebuks]] ''c''
 
