--- a/wiki/sun.wikitext
+++ b/wiki/sun.wikitext
@@ -36,7 +36,7 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 
 ===Noun===
 '''sun'''
-#A [[star]], especially when seen as the centre of a [[solar system]].
+#A [[star]], especially when seen as the centre of the [[Milky Way]].
 
 ====Related terms====
 *[[sunbath]]
