--- a/wiki/sun.wikitext
+++ b/wiki/sun.wikitext
@@ -1,20 +1,22 @@
 ==English==
+
 ===Pronunciation===
 *{{AHD|/sŭn/}}
 *[[SAMPA]]: /sVn/
 
 ===Homophone===
 *[[son]]
-===Abbreviation===
+
+==={{Abbreviation}}===
 '''Sun.'''
-#[[Sunday]].
+# [[Sunday]].
 
 ===Etymology===
 From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne]] and Latin [[Sol]].
 
 ===Proper noun===
 '''Sun''' or '''sun'''
-#The star at the centre of our [[solar system]].
+# The star at the centre of our [[solar system]].
 
 ====Translations====
 
@@ -36,7 +38,7 @@ From Middle English, from Old English [[sunne]]. Cognates include German [[Sonne
 
 ===Noun===
 '''sun'''
-#A [[star]], especially when seen as the centre of the [[Milky Way]].
+# A [[star]], especially when seen as the centre of any single [[solar system]].
 
 ====Related terms====
 *[[sunbath]]
