--- a/wiki/ferro.wikitext
+++ b/wiki/ferro.wikitext
@@ -1,14 +1,32 @@
 ==Italian==
+===Etymology===
+Latin ''[[ferrum]]''
+===Pronunciation===
+fèrro, /ˈfɛrro/, /<tt>"fErro</tt>/
 ===Noun===
 '''ferro''' ''m'' (''plural'' '''[[ferri]]''')
 
 #[[iron]] (''metal, tool made of iron'')
 
+===Related terms===
+*[[ferraio]]
+*[[ferrame]]
+*[[ferramenta]]
+*[[ferramento]]
+*[[ferrare]]
+*[[ferrareccia]]
+*[[ferreo]]
+*[[ferriera]]
+*[[ferrifero]]
+*[[ferrite]]
+*[[ferro-]]
+*[[ferroso]]
+
 ====Derived terms====
 *[[ferro da maglia]]
 *[[ferro da stiro]]
 *[[ferrovia]]
-
+[[category:Italian elements]]
 [[gl:Ferro]]
 [[it:ferro]]
 [[pl:Ferro]]
