--- a/wiki/monkey.wikitext
+++ b/wiki/monkey.wikitext
@@ -13,7 +13,7 @@
 
 ====Translations====
 *'''Albanian''': [[majmun]] ''m''
-*'''Chinese''': [[猴子]] ([[hou2zi]])
+*'''Chinese''': [[猴子]] (hou2zi)
 *'''Catalan''': [[mico]] ''m''
 *'''Dutch''': [[aap]] ''m'', [[apin]] ''f''
 *'''Finnish''': [[apina]] (includes also [[ape]])
