--- a/wiki/beef.wikitext
+++ b/wiki/beef.wikitext
@@ -19,6 +19,7 @@ From French '''[[bœuf]]''', ''ox''; presumably from Latin '''[[bos]]''', ''ox''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Chinese pinyin: [[niurou]], [[niu2rou4]]
 *Finnish: [[naudanliha]]
 *French: [[bœuf]] ''m''
 *Catalan: [[vedella]] ''f''
