+English <air-cooled#99686>

--- a/wiki/air-cooled.wikitext
+++ b/wiki/air-cooled.wikitext
@@ -1,7 +1,8 @@
+==English==
+
 ===Adjective===
 '''air-cooled'''
-
-# cooled by air (rather than by other means such as water)
+# cooled by air (such as an engine, rather than by other means such as water)
 
 ===Related Terms===
 *[[air]]
