--- a/wiki/ferreo.wikitext
+++ b/wiki/ferreo.wikitext
@@ -1,1 +1,11 @@
-#REDIRECT [[Férreo]]
+==Italian==
+===Pronunciation===
+fèrreo, /ˈfɛrreo/, /<tt>"fErreo</tt>/
+===Adjective===
+'''ferreo'''
+
+# made from [[iron]]
+# [[firm]]
+
+===Related terms===
+*[[ferro]]
