--- a/wiki/pig.wikitext
+++ b/wiki/pig.wikitext
@@ -1,3 +1,4 @@
+==English==
 === Pronunciation ===
 *[[w:IPA|IPA]]: /pɪg/
 
@@ -30,7 +31,7 @@
 *[[Catalan]]: [[porc]] ''m'', [[truja]] ''f''
 *[[Cebuano]]: [[baboy]]
 *CJK Characters: [[豬]], [[猪]]; [[豚]]
-*Chinese: [[豬]], [[猪]] (zhū, zhu, [[zhu1]])
+*Chinese: [[豬]], [[猪]] (zhū, zhu)
 *Croatian: [[svinja]]
 *Czech: [[prase]]
 *Danish: [[svin]]
@@ -70,7 +71,6 @@
 *Polish: [[świnia]] '' ''
 *Portuguese: [[porco#Portuguese|porc]] ''m''
 *Romanian: [[porc#Romanian|porc]]
-*[[Romanica]]: [[porco#Romanica|porco]] ''m'', [[porca]] ''f''
 *[[Romansh]]: [[portg]]
 *[[Romany]]: [[balo]] ''m'', [[bali]] ''f''
 *Russian: [[свинья]] ([[svin'ja]]) '' ''
@@ -178,7 +178,7 @@
 *[[when pigs fly]]
 *[[pigs in blankets]]
 
-[[Category:English mammals]]
+[[Category:Mammals]]
 
 [[Category:1000 English basic words]]
 
