--- a/wiki/iron.wikitext
+++ b/wiki/iron.wikitext
@@ -349,11 +349,12 @@ The translations below need to be checked by native speakers and inserted into t
 *Finnish: [[rautainen]]
 *French: de [[fer]]
 *German: [[eisern]]
+*Interlingua: de [[ferro]], [[ferree]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Interlingua: de [[ferro]], [[ferree]]
+*Italian: [[ferreo]]
 *Japanese: [[鉄]]
 *Latin: [[ferreus]], -a, -um
 *Polish: [[żelazny]] ''m''
@@ -370,11 +371,11 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Polish: [[żelazny]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Polish: [[żelazny]] ''m''
 *Swedsish: [[järn-]]
 |}
 |}
