--- a/wiki/bread.wikitext
+++ b/wiki/bread.wikitext
@@ -18,6 +18,7 @@
 <!--Put translations for languages from A to I here-->
 *[[Basque]]: [[ogi]]
 *Bulgarian: [[хляб]] ''m''
+*Chinese pinyin [[mianbao]], [[mian4bao1]]
 *Czech: [[chléb]] ''m''
 *Danish: [[brød]] ''n''
 *Dutch: [[brood]] ''n''
