--- a/wiki/chicken.wikitext
+++ b/wiki/chicken.wikitext
@@ -44,6 +44,7 @@
 *[[Cebuano]]: [[manok]]
 *[[Chickasaw]]: [[akaka]] (1)
 *Chinese: [[雞]], [[鷄]], [[鸡]] (''pinyin'': jī) 
+*Chinese pinyin: [[ji]], [[ji1]]
 *Croatian: [[pile#Croatian|pile]], [[kokoš]]
 *Czech: [[slepice]] ''f'',  [[kur]] ''m'', [[kuře]] ''n'' (''young'')
 *Danish: [[kylling]] ''c''; [[høne]] ''c''; [[bangebuks]] ''c'' (''coward'')
