+senses, +pronunciations, +conjugations <llevar#99696>

--- a/wiki/llevar.wikitext
+++ b/wiki/llevar.wikitext
@@ -1,8 +1,17 @@
 ==Spanish==
-===Verb===
-'''llevar'''
+=== Pronunciations ===
+*{{SAMPA}} /"je(I).vAr/
+*{{IPAlink}} {{IPA|/'je(ɪ).vɑɹ/
 
+=== Transitive Verb ===
+'''llevar'''
 # [[take]], [[carry]]
+# to [[wear]]
+# to [[take]]; to [[lead]]; to [[bring]]
+#: ''Llevamos las chicas al cine.'' - "We bring the girls to the movies."
 
 ====Synonyms====
 *[[traer]]
+
+==== Conjugations ====
+{{template:Es:-ar|llev}}
