closing the template is good... <llevar#99696>

--- a/wiki/llevar.wikitext
+++ b/wiki/llevar.wikitext
@@ -1,7 +1,7 @@
 ==Spanish==
 === Pronunciations ===
 *{{SAMPA}} /"je(I).vAr/
-*{{IPAlink}} {{IPA|/'je(ɪ).vɑɹ/
+*{{IPAlink}} {{IPA|/'je(ɪ).vɑɹ/}}
 
 === Transitive Verb ===
 '''llevar'''
