--- a/wiki/paper.wikitext
+++ b/wiki/paper.wikitext
@@ -28,12 +28,12 @@
 *[[Guarani]]: [[kuatia]]
 *Hebrew: [[נייר]] (Ni'yar) ''m'', [[דף]] (Da'ff) ''m''
 *[[Interlingua]]: [[papiro]]
-*{{ga}}: [[páipéar]]
-*Italian: [[carta]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*{{ga}}: [[páipéar]]
+*Italian: [[carta]] ''f''
 *Japanese: [[紙]] ([[かみ]], kami)
 *[[Kurdish]]: [[perr]] ''m'', [[kaxez]] ''f''
 *{{no}}: [[Papir]], [[ark]]
@@ -41,7 +41,7 @@
 *Polish: [[papier]] ''m''
 *Portuguese: [[papel]] ''m''
 *{{ru}}: [[бумага]]
-*[[Spanish]]: [[papel]] ''m''
+*Spanish: [[papel]] ''m''
 *Swedish: [[papper]] ''n''
 *[[Tupinambá]]: [[kûatîara]]
 |}
@@ -72,8 +72,8 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Polish]]: [[artykuł]] ''m''
-*[[Spanish]]: [[artículo]] ''m''
+*Polish: [[artykuł]] ''m''
+*Spanish: [[artículo]] ''m''
 *Swedish: [[artikel]] ''c'', [[papper]] ''n'' (''colloquial'')
 |}
 |}
