--- a/wiki/actuarial.wikitext
+++ b/wiki/actuarial.wikitext
@@ -1,9 +1,9 @@
-----
-
-==[[Romanica]]==
-[[Category:Romanica language]]
+==English==
 ===Adjective===
-<b>actuarial</b>
-#[[actuarial]]
+#Of or pertaining to [[actuary|actuaries]]; as, the actuarial value of an [[annuity]]
+
+===Reference===3
+Webster 1913
+
 
 [[pl:Actuarial]]
