--- a/wiki/actuarial.wikitext
+++ b/wiki/actuarial.wikitext
@@ -2,7 +2,7 @@
 ===Adjective===
 #Of or pertaining to [[actuary|actuaries]]; as, the actuarial value of an [[annuity]]
 
-===Reference===3
+===Reference===
 Webster 1913
 
 
