--- a/wiki/perse.wikitext
+++ b/wiki/perse.wikitext
@@ -1,3 +1,14 @@
+==French==
+===Proper noun===
+'''Perse''' ''f''
+
+# [[Persia]]
+
+===Related terms===
+*[[persan]]
+
+----
+
 ==Italian==
 ===Pronunciation===
 pèrse, /ˈpɛrse/, /<tt>"pErse</tt>/
