--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 *Chinese: [[咖喱]] (gali)
+*Chinese pinyin: [[curry]], [[gali]], [[ga1li2]]
 *Dutch: [[kerrie]] ''m'' (1), curry ''m'' (1)
 *Finnish: [[kurry]] (1)
 *German: Curry ''n'' (1, 2)
