--- a/wiki/persan.wikitext
+++ b/wiki/persan.wikitext
@@ -5,9 +5,9 @@
 # [[Persian]]
 
 ===Noun===
-'''Persan''' ''m'', '''persane''' ''f''
+'''Persan''' ''m'', '''Persane''' ''f''
 
-# [[Persian]] people]]
+# [[Persian]] people
 
 ===Noun===
 '''persan''' ''m''
