robot  Adding:it <dashboard#92636>

--- a/wiki/dashboard.wikitext
+++ b/wiki/dashboard.wikitext
@@ -5,3 +5,5 @@
 #A [[panel]] under the [[windscreen]] of a [[motor car]] or [[aircraft]], containing [[indicator]] [[dial]]s, [[compartment]]s, and sometimes [[control]]s; originally a [[protection]] against the [[weather]]
 #(''computing'') a [[graphical user interface]] in the form of a dashboard
 [[category:English nouns]]
+
+[[it:dashboard]]
