--- a/wiki/Persian.wikitext
+++ b/wiki/Persian.wikitext
@@ -1,3 +1,4 @@
+{{rfc}}
 ==English==
 ===Etymology===
 From Middle English '''[[percynne]]''' < Middle French '''[[persien]]''' < Latin '''*[[Persianus]]''' < Latin '''[[Persia]]''' < Greek '''[[Περσίς]]''' < Old Persian '''[[Pārsa]]'''.
@@ -28,7 +29,7 @@ From Middle English '''[[percynne]]''' < Middle French '''[[persien]]''' < Latin
 *Estonian: [[pärsia]]
 *Faeroese: [[persiskt]]
 *Finnish: [[persia]]
-*French: [[Persane]] ''m''
+*French: [[persan]] ''m''
 *Georgian: [[ფარსიული]] (parsiuli)
 *Greek (Ancient): [[περσιστί]] (persistí)
 *Greek (Modern): [[Περσικά]] (Persiká)
@@ -62,8 +63,9 @@ From Middle English '''[[percynne]]''' < Middle French '''[[persien]]''' < Latin
 |}
 |}
 
-==Adjective==
-Describes a person, place or object referring to Persia or Persians.
+===Adjective===
+
+# Describes a person, place or object referring to Persia or Persians.
 
 ====See also====
 *[[Iranian]] 
@@ -86,7 +88,7 @@ Describes a person, place or object referring to Persia or Persians.
 *Hindi: [[फ़ारसी]] (pharsī) (1)
 *Hungarian: [[perzsiai]] (2)
 *Indonesian: [[farsi]] (2)
-*Italian: [[persiano]] (2)
+*Italian: [[persiano]] (2), [[persico]]
 *Korean: [[페르샤의]] (pereusya-ui) (2)
 *Persian: [[فارسی]] (pārsi) (2)
 *Polish: [[perski]] (2)
