/* Translations */ <ice cream#35950>

--- a/wiki/ice_cream.wikitext
+++ b/wiki/ice_cream.wikitext
@@ -34,6 +34,7 @@ Originally ''iced cream''.
 *Breton: [[skornenn]] ''f'' -où ''pl''
 *Catalan: [[gelat]] ''m''
 *Chinese: [[冰淇淋]]
+*Chinese pinyin: [[ice cream]], [[bingqilin]], [[bing1qi2lin2]]
 *Dutch: [[roomijs]] ''n'', [[ijs]] ''n'', [[ijsje]] ''n''
 * {{et}}: [[jäätis]]
 *Finnish: [[jäätelö]]
