--- a/wiki/Persia.wikitext
+++ b/wiki/Persia.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Proper Noun===
+===Proper noun===
 '''Persia'''
 
 #The [[country]] of [[Iran]] was formerly called "[[Persia]]" in English, but has always been referred to as "[[Iran]]" among Iranians themselves. The [[w:Persia|Persian Empire]] once included most of Western and [[Central Asia]] and [[Northern Africa]].
@@ -17,10 +17,22 @@
 ====See also====
 *[[Farsi]]
 *[[Iran]]
-*[[Iraq]]
 *[[w:Persia|Wikipedia article on Persia]]
 *[[w:Iran|Wikipedia article on Iran]]
-*[[w:Iraq|Wikipedia article on Iraq]]
+
+----
+
+==Italian==
+===Pronunciation===
+Pèrsia, /ˈpɛrsja/, /"pErsja/
+===Proper noun===
+'''Persia''' ''f''
+
+# Persia
+
+===Related terms===
+*[[persiano]]
+*[[persico]]
 
 [[nl:persia]]
 [[pl:Persia]]
