--- a/wiki/milk.wikitext
+++ b/wiki/milk.wikitext
@@ -21,6 +21,7 @@
 *Bulgarian: [[мляко]] ''n''
 *[[Catalan]]: [[llet]] ''f''
 *Chinese: [[牛奶]]
+*Chinese pinyin: [[niunai]], [[niu2nai3]]
 *Czech: [[mléko]] ''n''
 *Danish: [[mælk]] ''c''
 *Dutch: [[melk]] ''f''
