--- a/wiki/mushroom.wikitext
+++ b/wiki/mushroom.wikitext
@@ -25,6 +25,7 @@ Altered form of Middle English [[musheron]], [[musseron]], from Old French [[mou
 
 ====Translations====
 *Chinese Characters: [[圥]]
+*Chinese pinyin: [[mogu]], [[mo2gu1]]
 *Dutch: [[paddestoel]] ''m'' (1,2), [[zwam]] ''m'' (1,2)
 *Estonian: [[seen]]
 *Finnish: [[sieni]] (1, 2), [[itiöemä]] (2)
