--- a/wiki/octopus.wikitext
+++ b/wiki/octopus.wikitext
@@ -19,7 +19,8 @@ From Latinized Greek noun '''[[oktopous]]''' ('''[[ὀκτώπους]]''') ''m''
 *[[Bosnian]]: [[hobotnica]] ''f''
 *Bulgarian: [[октопод]] (oktopod)
 *[[Catalan]]: [[pop#Catalan|pop]] ''m''
-*Chinese: [[章魚]], [[章鱼]] (zhāng yú)
+*Chinese: [[章魚]], [[章鱼]] (zhāngyú)
+*Chinese pinyin: [[zhangyu]], [[zhang1yu2]]
 *[[Cornish]]: [[kollell-lesa]] ''f''
 *Czech: [[chobotnice]]
 *Danish: [[blæksprutte]] ''c''
