--- a/wiki/condena.wikitext
+++ b/wiki/condena.wikitext
@@ -1,1 +1,8 @@
-#REDIRECT [[Cadena]]
+==Spanish==
+===Noun===
+'''condena''' ''f''
+
+# a [[sentence]]
+
+====Related terms====
+*[[condenar]] ''verb''<!-- to sentence -->
