robot  Adding:pt <deceitful#82319>

--- a/wiki/deceitful.wikitext
+++ b/wiki/deceitful.wikitext
@@ -4,3 +4,5 @@
 #[[Dishonestly]] [[deceptive]]
 #[[deliberately]] [[misleading]] or [[cheating]]
 [[Category:English adjectives]]
+
+[[pt:Deceitful]]
