--- a/wiki/deceit.wikitext
+++ b/wiki/deceit.wikitext
@@ -8,3 +8,5 @@
 #Any trick, collusion, contrivance, false representation, or underhand practice, used to defraud another. When injury is thereby effected, an action of deceit, as it called, lies for compensation.
 
 [[pl:Deceit]]
+[[pt:Deceit]]
+[[fi:Deceit]]
