robot  Adding:it <deck chair#96490>

--- a/wiki/deck_chair.wikitext
+++ b/wiki/deck_chair.wikitext
@@ -2,3 +2,5 @@
 ===Noun===
 '''[[deck]] [[chair]]'''
 # a [[folding]] [[chair]] in which a [[wooden]] [[frame]] supports a [[length]] of [[canvas]]; traditionally used on the [[beach]] or onboard a [[liner]]
+
+[[it:deck chair]]
