robot  Adding:pt,fi <decision#39763>

--- a/wiki/decision.wikitext
+++ b/wiki/decision.wikitext
@@ -27,5 +27,8 @@ See also: [[Action]], [[w:Category:European Union law]].
 *[[decisive]]
 *[[decision tree]]
 
-[[it:decision]]
 [[Category:1000 English basic words]]
+
+[[it:decision]]
+[[pt:Decision]]
+[[fi:Decision]]
