--- a/wiki/pita.wikitext
+++ b/wiki/pita.wikitext
@@ -7,3 +7,6 @@
 ===Noun===
 ;pita
 #A type of bread pouch used for making a [[gyro]].  Delicious with just [[humus]].
+
+====Translations====
+*Chinese pinyin: [[pita]]
