--- a/wiki/pork.wikitext
+++ b/wiki/pork.wikitext
@@ -18,6 +18,7 @@ From Norman French [[porc]] < Latin [[porcus]], [[pig]]
 
 ====Translations====
 *Chinese: [[豬肉]], [[猪肉]]
+*Chinese pinyin: [[zhurou]], [[zhu1rou4]]
 *Dutch: [[varkensvlees]] ''n''
 *French: [[porc]] ''m''
 *German: [[Schweinefleisch]] ''n''
