--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -15,6 +15,7 @@ From Spanish [[patata]].
 {|
 <!--languages from A to I go here-->
 *[[Chinese]]: [[土豆]], [[马铃薯]] (simplified), [[ma3ling2shu3]]
+*Chinese pinyin: [[malingshu]], [[ma3ling2shu3]]
 *Czech: [[brambor]]
 *Danish: [[kartoffel]]
 *Dutch: [[aardappel]] ''f'', [[pieper]] ''m'', [[patat]] ''f''
