robot  Adding:fi,it <risposta#95237>

--- a/wiki/risposta.wikitext
+++ b/wiki/risposta.wikitext
@@ -9,3 +9,6 @@ rispósta, /risˈposta/, /<tt>ris"ponsta</tt>/
 ===Related terms===
 *[[rispondere]]
 *[[rispostaccia]]
+
+[[it:risposta]]
+[[fi:Risposta]]
