--- a/wiki/pudding.wikitext
+++ b/wiki/pudding.wikitext
@@ -6,6 +6,7 @@
 # a type of dessert that has a texture similar to [[custard]] or [[mousse]] but using some kind of starch as the thickening agent.
 
 ==== Translation ====
+*Chinese pinyin: [[pudding]], [[buding]], [[bu4ding1]]
 *Dutch: pudding ''m'' (1) (only dessert meaning)
 *[[Finnish]]: [[vanukas]]
 *Swedish: pudding ''c'' (1, 2, 3)
