robot  Adding:fi <Robert#56170>

--- a/wiki/Robert.wikitext
+++ b/wiki/Robert.wikitext
@@ -14,3 +14,5 @@
 *Japanese: [[ロバート]] (robāto), [[ロベルト]] (roberuto), [[ロベルタ]] (roberuta)
 *Spanish: [[Roberto]] ''m'', [[Roberta]] ''f''
 *Polish:[[Robert]] ''m'' (with full conjugation in all noun cases: Roberta, Robertowi, Robertu)
+
+[[fi:Robert]]
