--- a/wiki/road.wikitext
+++ b/wiki/road.wikitext
@@ -67,3 +67,5 @@ The term road is used with the preposition on. Something is on the road, but in 
 |}
 |}
 [[Category:1000 English basic words]]
+
+[[fi:Road]]
