robot  Adding:fi <define#55141>

--- a/wiki/define.wikitext
+++ b/wiki/define.wikitext
@@ -86,3 +86,5 @@ Middle [[English]], from middle [[French]] ''definer'', from [[Latin]] ''definir
 <!--languages from J to Z go here-->
 |}
 |}
+
+[[fi:Define]]
