robot  Adding:hu <rocket#78871>

--- a/wiki/rocket.wikitext
+++ b/wiki/rocket.wikitext
@@ -32,3 +32,5 @@ French ''[[roquette]]'', Italian ''[[ruchetta]]'', diminutive of ''[[ruca]]'', L
 *[[rocket salad]]
 
 [[Category:English words with multiple etymologies
+
+[[hu:rocket]]
