robot  Adding:fr <degree#33931>

--- a/wiki/degree.wikitext
+++ b/wiki/degree.wikitext
@@ -28,5 +28,7 @@
 *Swedish: [[grad]] (1,2,3)
 *Turkish: [[derece]] (1, 2, 3, 4)
 
-[[it:degree]]
 [[Category:1000 English basic words]]
+
+[[fr:degree]]
+[[it:degree]]
