robot  Adding:it <delve#98580>

--- a/wiki/delve.wikitext
+++ b/wiki/delve.wikitext
@@ -7,3 +7,5 @@
 #To [[search]] [[thoroughly]] and [[carefully]]
 #: ''She was [[intensely]] [[eager]] to [[delve]] into the [[mystery]] of Mr. Joplin and his [[brief case]].''
 #To [[dig]] the ground
+
+[[it:delve]]
