robot  Adding:fr <delta#28091>

--- a/wiki/delta.wikitext
+++ b/wiki/delta.wikitext
@@ -68,6 +68,7 @@ From [[del]] (''[[part]]'') + [[ta|ta(ga)]] (''[[take]]''); i.e. to ''take (a) p
 
 [[Category:Greek derivations]]
 
+[[fr:delta]]
 [[gl:Delta]]
 [[pl:Delta]]
 [[fi:Delta]]
