robot  Adding:fi,hu <rosa#38241>

--- a/wiki/rosa.wikitext
+++ b/wiki/rosa.wikitext
@@ -37,8 +37,11 @@ rò<u>s</u>a, /ˈrɔza/, /<tt>"rOza</tt>/
 
 ====See====
 *[[cor-de-rosa]].
+
 [[es:Rosa]]
 [[it:rosa]]
+[[hu:rosa]]
 [[nl:rosa]]
 [[ja:rosa]]
 [[pl:Rosa]]
+[[fi:Rosa]]
