robot  Adding:pl <root#39505>

--- a/wiki/root.wikitext
+++ b/wiki/root.wikitext
@@ -216,5 +216,7 @@ From Middle English '''[[wrōten]]''' (to dig with the snout) < Old English '''[
 *[[take root]]
 *[[taproot]]
 
-[[sv:root]]
 [[Category:1000 English basic words]]
+
+[[pl:Root]]
+[[sv:root]]
