robot  Adding:fr <rookie#69369>

--- a/wiki/rookie.wikitext
+++ b/wiki/rookie.wikitext
@@ -8,4 +8,5 @@ noun
 
 ''Late 19th century. Origin uncertain: perhaps an alteration of recruit, influenced by rook in the obsolete sense “dupe, person easily cheated.”''
 
+[[fr:rookie]]
 [[zh:Rookie]]
