--- a/wiki/rosette.wikitext
+++ b/wiki/rosette.wikitext
@@ -10,3 +10,5 @@
 #A rose burner. See under Rose.
 #Any structure having a flowerlike form; especially, the group of five broad ambulacra on the upper side of the spatangoid and clypeastroid sea urchins. See Illust. of Spicule, and Sand dollar, under Sand.
 #A flowerlike color marking; as, the rosettes on the leopard.
+
+[[fr:rosette]]
