robot  Adding:pl <routing#95882>

--- a/wiki/routing.wikitext
+++ b/wiki/routing.wikitext
@@ -13,3 +13,5 @@
 '''routing'''
 # a [[method]] of [[finding]] [[path]]s from [[origin]]s to [[destination]]s in a [[network]] such as the [[Internet]], along which [[information]] can be passed
 # cutting a channel in a material such as [[wood]] using a [[router]]
+
+[[pl:Routing]]
