robot  Adding:fr <rout#62522>

--- a/wiki/rout.wikitext
+++ b/wiki/rout.wikitext
@@ -18,3 +18,5 @@
 #To roar; to bellow; to snort; to snore loudly.
 #To scoop out with a gouge or other tool; to furrow.
 #To search or root in the ground, as a swine.
+
+[[fr:raout]]
