robot  Adding:fi <dentist#66528>

--- a/wiki/dentist.wikitext
+++ b/wiki/dentist.wikitext
@@ -27,4 +27,5 @@ From Latin '''[[dens]]''', '''[[dent-]]''', ''tooth'', + agent suffix '''[[-ist]
 
 [[it:dentist]]
 [[hu:Dentist]]
+[[fi:Dentist]]
 [[sv:dentist]]
