robot  Adding:sv <Roy#90658>

--- a/wiki/Roy.wikitext
+++ b/wiki/Roy.wikitext
@@ -4,3 +4,5 @@
 '''Roy'''
 # A male [[given name]].
 # In ''[[w:Fire_Emblem|Fire Emblem]]'' video game series, the main Lord character of ''Fire Emblem: Fuuin no Tsurugi'', who also appeared as an unlockable character in ''[[w:Super_Smash_Bros._Melee|Super Smash Bros. Melee]]''.
+
+[[sv:Roy]]
