--- a/wiki/pineapple.wikitext
+++ b/wiki/pineapple.wikitext
@@ -19,7 +19,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Chinese pinyin: [[boluo]], [[bo1luo2]]
+*Chinese: [[bo1luo2]]
 *French: [[ananas#French|ananas]] ''m''
 *Lithuanian: [[ananasas]] ''m''
 |}
@@ -37,7 +37,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Catalan]]: [[pinya]] ''f''
-*Chinese pinyin: [[boluo]], [[bo1luo2]]
+*Chinese: [[bo1luo2]]
 *Danish: [[ananas#Danish|ananas]]
 *Dutch: [[ananas#Dutch|ananas]] ''m''
 *Finnish: [[ananas#Finnish|ananas]]
