/* Translations */ fmt chinese <potato#37487>

--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -14,13 +14,12 @@ From Spanish [[patata]].
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
-*[[Chinese]]: [[土豆]], [[马铃薯]] (simplified), [[ma3ling2shu3]]
-*Chinese pinyin: [[malingshu]], [[ma3ling2shu3]]
+*Chinese: [[土豆]], [[马铃薯]], [[ma3ling2shu3]]
 *Czech: [[brambor]]
 *Danish: [[kartoffel]]
 *Dutch: [[aardappel]] ''f'', [[pieper]] ''m'', [[patat]] ''f''
 *[[Esperanto]]: [[terpomo]]
-*[[Finnish]]: [[peruna]]
+*Finnish: [[peruna]]
 *French: [[pomme de terre]] ''f''
 *German: [[Kartoffel]] ''f''
 *Italian: [[patata]]
@@ -32,7 +31,7 @@ From Spanish [[patata]].
 *Japanese: [[じゃがいも]] (jagaimo), [[馬鈴薯]] (ばれいしょ, barēsho)
 *[[Limburgish]]: [[irpel]]
 *Lithuanian: [[bulvė]] ''f''
-*[[Polish]]: [[ziemniak]] ''m'', [[kartofel]] ''m'', [[pyra]] ''f''
+*Polish: [[ziemniak]] ''m'', [[kartofel]] ''m'', [[pyra]] ''f''
 *Portuguese: [[batata]], [[batatinha]]
 *Russian: [[картофель]], ''m''
 *{{sk}}: [[zemiaky]]
