robot  Adding:nl <dependent#39765>

--- a/wiki/dependent.wikitext
+++ b/wiki/dependent.wikitext
@@ -23,5 +23,7 @@ Latin ''de-'' (from) + ''pendere'' (to hang)
 *[[independent]]
 *[[co-dependent]]
 
-[[it:dependent]]
 [[Category:1000 English basic words]]
+
+[[it:dependent]]
+[[nl:dependent]]
