robot  Adding:pl <rugose#90607>

--- a/wiki/rugose.wikitext
+++ b/wiki/rugose.wikitext
@@ -3,3 +3,5 @@
 '''rugose'''
 #having [[wrinkle]]s, [[crease]]s or [[ridge]]s
 #(''botany'') having a [[rough]], wrinkled [[surface]]
+
+[[pl:Rugose]]
