/* Translation */ fmt chinese <pudding#38276>

--- a/wiki/pudding.wikitext
+++ b/wiki/pudding.wikitext
@@ -6,12 +6,12 @@
 # a type of dessert that has a texture similar to [[custard]] or [[mousse]] but using some kind of starch as the thickening agent.
 
 ==== Translation ====
-*Chinese pinyin: [[pudding]], [[buding]], [[bu4ding1]]
+*Chinese: [[bu4ding1]]
 *Dutch: pudding ''m'' (1) (only dessert meaning)
-*[[Finnish]]: [[vanukas]]
-*Swedish: pudding ''c'' (1, 2, 3)
+*Finnish: [[vanukas]]
 *German: Pudding ''m'' (1, 2, 4) Auflauf ''m'', Terrine ''f'', Pastete ''f'' (3)
-*Italian: budino
+*Italian: [[budino]]
+*Swedish: pudding ''c'' (1, 2, 3)
 
 ==== Related Terms ====
 
