--- a/wiki/pudding.wikitext
+++ b/wiki/pudding.wikitext
@@ -1,4 +1,6 @@
+==English==
 ===Noun===
+'''pudding''' ([[puddings]])
 
 # a type of [[cake]] or [[dessert]] cooked by [[boiling]] or [[steaming]] although there are exceptions, for example [[yorkshire pudding]]
 # dessert ''(possibly slang or childish use) ''
@@ -9,12 +11,11 @@
 *Chinese: [[bu4ding1]]
 *Dutch: pudding ''m'' (1) (only dessert meaning)
 *Finnish: [[vanukas]]
-*German: Pudding ''m'' (1, 2, 4) Auflauf ''m'', Terrine ''f'', Pastete ''f'' (3)
+*German: Pudding ''m'' (1, 2, 4) [[Auflauf]] ''m'', [[Terrine]] ''f'', [[Pastete]] ''f'' (3)
 *Italian: [[budino]]
 *Swedish: pudding ''c'' (1, 2, 3)
 
 ==== Related Terms ====
-
 *[[yorkshire pudding]]
 *[[dumpling]]
 *[[rice pudding]]
