robot  Adding:fi <rule#48759>

--- a/wiki/rule.wikitext
+++ b/wiki/rule.wikitext
@@ -25,12 +25,13 @@ Transitive and intransitive
 ====Translations====
 *{{msg:fi}}: [[hallita]], [[vallita]]
 
-[[pt:Rule]]
-[[sv:rule]]
-
 ===See also===
 
 *[[ruler]]
 *[[Rule Britannia]]
 *[[slide rule]]
 [[Category:1000 English basic words]]
+
+[[pt:Rule]]
+[[fi:Rule]]
+[[sv:rule]]
