robot  Adding:fi <desert#39016>

--- a/wiki/desert.wikitext
+++ b/wiki/desert.wikitext
@@ -99,5 +99,7 @@ Old French "deserved"
 ====See also====
 *[[deserts]]
 *[[w:Desert|Wikipedia article on deserts]]
-[[it:desert]]
 [[Category: English heteronyms]]
+
+[[it:desert]]
+[[fi:Desert]]
