--- a/wiki/lion.wikitext
+++ b/wiki/lion.wikitext
@@ -23,12 +23,13 @@ From French '''lion''', from Latin '''[[leo]]''', '''[[leonis]]'''
 *[[Binisayâ]]: [[liyón]]
 *Bosnian: [[lav]] ''m''
 *Bulgarian: [[лъв]] (lâw) ''m''
-*Chinese: [[狮]] (shī), [[狮子]] (shīzi, [[shi1zi]])
+*Chinese: [[狮]] (shī), [[狮子]] (shīzi)
 *Czech: [[lev]] ''m''
 *Danish: [[løve]]
 *Dutch: [[leeuw]] ''m''
 *[[Esperanto]]: [[leono]]
 *Estonian: [[lõvi]]
+*[[Farsi]]: [[شير]] (shir)
 *Finnish: [[leijona]]
 *French: [[lion#French|lion]] ''m''
 *German: [[Löwe]] ''m''; [[Leu]] ''m'' (poetic)
@@ -36,7 +37,6 @@ From French '''lion''', from Latin '''[[leo]]''', '''[[leonis]]'''
 *[[Old High German]]: [[lewo]], [[leo]]
 *Modern Greek: [[λιοντάρι]] (liontári) ''m''
 *Ancient Greek: [[λέων]] (léōn) ''m''
-*[[Farsi]]: [[شير]] (shir)
 *Hawaiian: [[liona]]
 *Hebrew: [[אריה]] (aryeh)
 *Hindi: [[शेर]] (sher), [[सिंह]] (singha)
