expand, wikify, +cat onomatopoeia <chirp#61403>

--- a/wiki/chirp.wikitext
+++ b/wiki/chirp.wikitext
@@ -4,10 +4,13 @@
 
 '''chirp'''
 
-#A short, sharp note, as of a bird or insect.
+#(countable) A [[short]], [[sharp]] or [[high]] note or noise, as of a [[bird]] or [[insect]].
 
-===Verb===
+===Intransitive verb===
 
 '''to chirp'''
 
 #To make a shop, sharp, cheerful, as of small birds or crickets.
+#to [[speak]] in a high-[[pitch]]ed [[staccato]]
+
+[[Category:Onomatopoeia]]
