fmt chinese <beef#45015>

--- a/wiki/beef.wikitext
+++ b/wiki/beef.wikitext
@@ -19,10 +19,10 @@ From French '''[[bœuf]]''', ''ox''; presumably from Latin '''[[bos]]''', ''ox''
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Chinese pinyin: [[niurou]], [[niu2rou4]]
+*Chinese: [[niu2rou4]]
 *Finnish: [[naudanliha]]
 *French: [[bœuf]] ''m''
-*Catalan: [[vedella]] ''f''
+*[[Catalan]]: [[vedella]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
