--- a/wiki/genocide.wikitext
+++ b/wiki/genocide.wikitext
@@ -7,6 +7,7 @@ Greek ''genos'' 'race' + [[-cide]].
 ===Noun===
 '''genocide'''
 # The systematic killing of an entire enthic group, nation, or political group.
+this is a test
 
 ===Translations===
 * {{pt}}: [[genocídio]]
