robot  Adding:pl,it <determinate#95364>

--- a/wiki/determinate.wikitext
+++ b/wiki/determinate.wikitext
@@ -3,3 +3,6 @@
 [[Category:English adjectives]]
 '''determinate'''
 # [[limit]]ed, [[define]]d, [[resolve]]d, [[decide]]d
+
+[[it:determinate]]
+[[pl:Determinate]]
