fmt chinese <curry#38370>

--- a/wiki/curry.wikitext
+++ b/wiki/curry.wikitext
@@ -9,8 +9,7 @@
 *[[ruby murray]] (''rhyming slang'')
 
 ====Translations====
-*Chinese: [[咖喱]] (gali)
-*Chinese pinyin: [[curry]], [[gali]], [[ga1li2]]
+*Chinese: [[咖喱]] (gālí)
 *Dutch: [[kerrie]] ''m'' (1), curry ''m'' (1)
 *Finnish: [[kurry]] (1)
 *German: Curry ''n'' (1, 2)
