fmt chinese <eel#36694>

--- a/wiki/eel.wikitext
+++ b/wiki/eel.wikitext
@@ -13,8 +13,7 @@
 ====Translations====
 *[[Bosnian]]: [[jegulja]] ''f''
 *CJKV Characters: [[鰻]], [[鳗]]
-*Chinese: [[鳗鱼]]
-*Chinese pinyin: [[manyu]], [[man4yu2]]
+*Chinese: [[鳗鱼]] ([[man4yu2]])
 *Dutch: [[paling]] ''m'', [[aal]] ''m''
 *Estonian: [[angerjas]]
 *Finnish: [[ankerias]]
