robot  Adding:de <SEO#70178>

--- a/wiki/SEO.wikitext
+++ b/wiki/SEO.wikitext
@@ -3,3 +3,5 @@
 ==={{initialism}}===
 '''SEO'''
 # Search Engine Optimization <!-- a possible reason people try to add spurrious links to their web pages from Wiktionary.-->
+
+[[de:SEO]]
