created entry <sizzle#99706>

--- a/wiki/sizzle.wikitext
+++ b/wiki/sizzle.wikitext
@@ -1,5 +1,6 @@
 ==English===
 ===Intransitive verb===
+'''sizzle''' ('''sizzles''', '''sizzled''', '''sizzling''')
 #to make the sound of [[water]] hitting a [[hot]] surface
 #to be [[exciting]] or [[dazzling]]
 #:''The song '''sizzled''' with energy.''
