--- a/wiki/sizzle.wikitext
+++ b/wiki/sizzle.wikitext
@@ -1,10 +1,9 @@
-==English===
+==English==
 ===Intransitive verb===
 '''sizzle''' ('''sizzles''', '''sizzled''', '''sizzling''')
 #to make the sound of [[water]] hitting a [[hot]] surface
 #to be [[exciting]] or [[dazzling]]
 #:''The song '''sizzled''' with energy.''
-
 
 ===Noun===
 '''sizzle'''
@@ -12,6 +11,5 @@
 #:''We heard the '''sizzle''' of the onions hitting the pan.''
 #(uncountable) [[zing]], [[zip]], or [[pizazz]]; excitement or 
 #:''Her performance had a lot of '''sizzle'''.''
-
 
 [[Category:onomatopoeia]]
