/* Translations */ fmt chinese <hamburger#36248>

--- a/wiki/hamburger.wikitext
+++ b/wiki/hamburger.wikitext
@@ -34,7 +34,7 @@ From German ''Hamburger'', a person from Hamburg.
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
-*Chinese pinyin: [[hamburger]], [[hanbaobao]], [[han4bao3bao1]]
+*Chinese: [[han4bao3bao1]]
 *Dutch: hamburger
 *French: hamburger ''m''
 *Italian: hamburger ''m''
