fmt chinese <ice cream#35950>

--- a/wiki/ice_cream.wikitext
+++ b/wiki/ice_cream.wikitext
@@ -33,8 +33,7 @@ Originally ''iced cream''.
 {|
 *Breton: [[skornenn]] ''f'' -où ''pl''
 *Catalan: [[gelat]] ''m''
-*Chinese: [[冰淇淋]]
-*Chinese pinyin: [[ice cream]], [[bingqilin]], [[bing1qi2lin2]]
+*Chinese: [[冰淇淋]] ([[bing1qi2lin2]])
 *Dutch: [[roomijs]] ''n'', [[ijs]] ''n'', [[ijsje]] ''n''
 * {{et}}: [[jäätis]]
 *Finnish: [[jäätelö]]
