robot  Adding:fi,et,fr <Deutschland#66821>

--- a/wiki/Deutschland.wikitext
+++ b/wiki/Deutschland.wikitext
@@ -9,7 +9,10 @@
 [[Category:de:Countries]]
 
 [[de:Deutschland]]
+[[et:Deutschland]]
+[[fr:Deutschland]]
 [[hi:Deutschland]]
 [[hu:Deutschland]]
 [[nl:Deutschland]]
+[[fi:Deutschland]]
 [[sv:Deutschland]]
