--- a/wiki/cretin.wikitext
+++ b/wiki/cretin.wikitext
@@ -4,3 +4,8 @@ from French [[crétin]], from Vulgar Latin *[[christianus|christiānus]], from L
 '''cretin''' ([[cretins]])
 
 #an [[idiot]]
+
+===Translations===
+French:
+German:
+[[Ido]]: [[kretino]]
