--- a/wiki/cucumber.wikitext
+++ b/wiki/cucumber.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 *Bulgarian: [[краставица]] ''f'' (2)
-*Chinese: [[qing1gua1]]
+*Chinese: (q&#299;nggu&#257;)
 *Dutch: [[komkommer]] ''m'' (2)
 *Finnish: [[kurkku]] (2)
 *French: [[concombre]] ''m'' (2)
