--- a/wiki/cretin.wikitext
+++ b/wiki/cretin.wikitext
@@ -6,6 +6,6 @@ from French [[crétin]], from Vulgar Latin *[[christianus|christiānus]], from L
 #an [[idiot]]
 
 ===Translations===
-French:
-German:
-[[Ido]]: [[kretino]]
+*French:
+*German:
+*[[Ido]]: [[kretino]]
