--- a/wiki/pork.wikitext
+++ b/wiki/pork.wikitext
@@ -17,8 +17,7 @@ From Norman French [[porc]] < Latin [[porcus]], [[pig]]
 *[[porcine]]
 
 ====Translations====
-*Chinese: [[豬肉]], [[猪肉]]
-*Chinese pinyin: [[zhurou]], [[zhu1rou4]]
+*Chinese: [[豬肉]], [[猪肉]] (zhu1rou4)
 *Dutch: [[varkensvlees]] ''n''
 *French: [[porc]] ''m''
 *German: [[Schweinefleisch]] ''n''
