fmt chinese <milk#28717>

--- a/wiki/milk.wikitext
+++ b/wiki/milk.wikitext
@@ -20,8 +20,7 @@
 *[[Breton]]: [[laezh]] ''m''
 *Bulgarian: [[мляко]] ''n''
 *[[Catalan]]: [[llet]] ''f''
-*Chinese: [[牛奶]]
-*Chinese pinyin: [[niunai]], [[niu2nai3]]
+*Chinese: [[牛奶]] (niu2nai3)
 *Czech: [[mléko]] ''n''
 *Danish: [[mælk]] ''c''
 *Dutch: [[melk]] ''f''
