robot  Adding:fr,et,gl <sable#97502>

--- a/wiki/sable.wikitext
+++ b/wiki/sable.wikitext
@@ -7,3 +7,7 @@
 #A [[coat]] made from the [[fur]] of the sable.
 #An artist's [[brush]] made from the [[fur]] of the sable.
 #(''heraldry'') The [[tincture]] with the colour/color [[black]].
+
+[[et:Sable]]
+[[fr:sable]]
+[[gl:Sable]]
