robot  Adding:fi <sabato#1922>

--- a/wiki/sabato.wikitext
+++ b/wiki/sabato.wikitext
@@ -21,10 +21,12 @@ sàbato, /ˈsabato/, /<tt>"sabato</tt>/
 
 [[Category:Days of the week]]
 [[Category:Italian days of the week]]
+
 [[eo:Sabato]]
 [[it:sabato]]
 [[nl:sabato]]
 [[ja:sabato]]
 [[pl:Sabato]]
 [[pt:Sabato]]
+[[fi:Sabato]]
 [[sv:sabato]]
