order senses; fmt <pita#77002>

--- a/wiki/pita.wikitext
+++ b/wiki/pita.wikitext
@@ -1,9 +1,10 @@
 ==English==
+===Noun===
+'''pita'''
+
+#A type of bread pouch used for making a [[gyro]].  Delicious with just [[humus]].
 
 ==={{acronym}}===
-;pita
-#An [[acronym]] or [[initialism]] formed from the words, "Pain In The Ass"; usually pronounced as the noun [[pita]] with more emphasis on second sylable (peh-TAH instead of pee-tah).
+'''PITA'''
 
-===Noun===
-;pita
-#A type of bread pouch used for making a [[gyro]].  Delicious with just [[humus]].
+#An [[acronym]] or [[initialism]] formed from the words, "Pain In The Ass"; usually pronounced as the noun [[pita]] with more emphasis on second sylable (peh-TAH instead of pee-tah).
